press-photos-issue - remove photo white space

--- a/blocks/press-cards/press-cards.css
+++ b/blocks/press-cards/press-cards.css
@@ -34,7 +34,7 @@
 
 .press-cards > ul > li > .press-cards-card-body {
     display: flex;
-    flex-direction: column
+    flex-direction: column;
 }
 
 .press-cards .press-cards-item-info {
@@ -93,19 +93,16 @@
     .press-cards > ul > li > .press-cards-card-image {
         flex: 0 0 auto;
         cursor: pointer;
-        display: inline-block;
-        height: auto;
-        align-items: flex-end;
+        display: flex;
+        flex-direction: column;
         width: 15rem;
-        box-shadow: var(--elevation-highlight);
     }
 
-    .landscape .press-cards > ul > li > .press-cards-card-image {
+    .press-cards .landscape > ul > li, .press-cards .landscape > ul > li > .press-cards-card-image {
         width: 20rem;
     }
 
     .press-cards > ul > li > .press-cards-card-image > picture {
-        display: block;
         width: 100%;
     }
 
@@ -115,16 +112,12 @@
         font-weight: 300;
     }
 
-    .press-cards > ul > li > .press-cards-card-body h3 {
-        flex: 0 0 auto;
+    .press-cards > ul > li > .press-cards-card-body :is(h3, h4, p) {
         display: flex;
-        align-self: stretch;
+        flex: 1 0 auto;
     }
 
-    .press-cards > ul > li > .press-cards-card-body h4 {
-        flex: 1 1 auto;
-        display: flex;
-        align-self: stretch;
+    .press-cards > ul > li > .press-cards-card-body :is(h4, p) {
         margin-block-end: 1.33em;
     }
 }
